--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -27,6 +27,12 @@
 
 </jsp-config>
 
+ <error-page>
+   <exception-type>java.lang.Throwable</exception-type>
+   <location>/error.jsp</location>
+ </error-page>
+
+
 <!--
 <welcome-file-list>
 			<welcome-file>
