--- a/trunk/WEB-INF/web.xml
+++ b/trunk/WEB-INF/web.xml
@@ -28,10 +28,10 @@
 </jsp-config>
 
 
- <error-page>
+ <!-- error-page>
    <exception-type>java.lang.Throwable</exception-type>
    <location>/error.jsp</location>
- </error-page>
+ </error-page -->
 
 <!-- 
 <welcome-file-list>
