--- a/WEB-INF/classes/USIP_OSP_Properties_en_US.properties.template
+++ b/WEB-INF/classes/USIP_OSP_Properties_en_US.properties.template
@@ -20,11 +20,11 @@ actor_image_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simul
 packaged_sim_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_sharing/packaged_simulations/
 sim_image_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation/images/
 
-conn_string_remote=jdbc:mysql://localhost:3306/test?user=peacepla&password=F73v-Mp4c
+conn_string_remote=jdbc:mysql://localhost:3306/test?user=peacepla&password=password
 
 principalschema_remote=usiposp
 username_remote=peacepla
-password_remote=F73v-Mp4c
+password_remote=password
 loc_remote=jdbc:mysql://localhost:
 port_remote=3306
 osp_admin_email_remote=me@skipcole.com
@@ -35,9 +35,9 @@ wipe_database_key_remote=remote
 email_archive_address_remote=usiposp@hotmail.com
 email_smtp_remote=peaceplatform.org
 schema_organization_remote=USIP
-smtp_auth_password_remote=F73v-Mp4c
+smtp_auth_password_remote=password
 smtp_auth_user_remote=peacepla
-password_remote=F73v-Mp4c
+password_remote=pasword
 username_remote=peacepla
 #######################################
 
@@ -58,12 +58,12 @@ actor_image_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\osp_core\\images\\a
 packaged_sim_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\simulation_sharing\\packaged_simulations\\
 sim_image_dir_local=C:\\apache\\tomcat\\webapps\\usip_osp\\simulation\\images\\
 
-conn_string_local=jdbc:mysql://localhost:3306/test?user=skip&password=brock_s
+conn_string_local=jdbc:mysql://localhost:3306/test?user=skip&password=password
 
 principalschema_local=usiposp
 schema_local=usiposp
 username_local=root
-password_local=brock_s
+password_local=password
 loc_local=jdbc:mysql://localhost:
 port_local=3306
 osp_admin_email_local=me@skipcole.com
@@ -80,5 +80,5 @@ uploads_local=C:\\apache\\tomcat\\work\\Catalina\\bin\\uploads\\
 unittest_principalschema_local=usiposp
 unittest_schema_local=usiposp
 unittest_username_local=root
-unittest_password_local=brock_s
+unittest_password_local=password
 
