--- a/trunk/WEB-INF/classes/USIP_OSP_Properties_en_US.properties.template
+++ b/trunk/WEB-INF/classes/USIP_OSP_Properties_en_US.properties.template
@@ -4,57 +4,59 @@
 #
 
 ################################################################
-# Change the environment name line below to change environments
+# If you know when the system is planned on being brought down for service
+# (a specific date, or an a repeating basis) you can put this information here and it 
+# will appear on the main login page.
 # 
-# You Must declare one environment name. Whatevere this name is, for example '_remote', you will add this to the end 
-# of each of your environment variables. This was designed to allow you keep multiple sets of environment variables in
-# one properties file.
+# It is probably fine to just leave this to the default value.
+#
+next_planned_outage=None Currently Planned
 
-environment_name=_remote
-
-release=0.0.0
-next_planned_outage=TBD
+#################################################################
+# This key is use when reseting the root database.
+# You will want to set it to a secrent random key to prevent someone 
+# from accidentally or maliciously removing your data.
+#
+wipe_database_key=local
 
 ##################################################################
-# For remote testing
-base_web_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/
-base_section_web_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_section_information/
-model_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_model_information/
-actor_image_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/osp_core/images/actors/
-packaged_sim_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_sharing/packaged_simulations/
-sim_image_dir_remote=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation/images/
+base_web_dir=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/
+base_section_web_dir=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_section_information/
+model_dir=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_model_information/
+actor_image_dir=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/osp_core/images/actors/
+packaged_sim_dir=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation_sharing/packaged_simulations/
+sim_image_dir=/usr/local/etc/httpd/sites/peaceplatform.org/htdocs/simulation_dev/simulation/images/
 
-conn_string_remote=jdbc:mysql://localhost:3306/test?user=peacepla&password=password
+conn_string=jdbc:mysql://localhost:3306/test?user=peacepla&password=password
 
-principalschema_remote=usiposp
-username_remote=peacepla
-password_remote=password
-loc_remote=jdbc:mysql://localhost:
-port_remote=3306
-osp_admin_email_remote=me@skipcole.com
+principalschema=usiposp
+username=peacepla
+password=password
 
-wipe_database_key_remote=remote
+#
+loc=jdbc:mysql://localhost:
+
+#######################################################################################
+# Port of the database server
+#     (This probably will not need changed.)
+port=3306
+
+osp_admin_email=me@skipcole.com
 
 ######################################
-email_archive_address_remote=usiposp@hotmail.com
-email_smtp_remote=peaceplatform.org
-schema_organization_remote=USIP
-smtp_auth_password_remote=password
-smtp_auth_user_remote=peacepla
-password_remote=pasword
-username_remote=peacepla
+email_archive_address=usiposp@hotmail.com
+email_smtp=peaceplatform.org
+schema_organization=USIP
+smtp_auth_password=password
+smtp_auth_user=peacepla
+password=pasword
+username=peacepla
 #######################################
 
-dialect_remote=org.hibernate.dialect.MySQLInnoDBDialect
-driver_class_remote=com.mysql.jdbc.Driver
-base_sim_url_remote=http://dev.opensimplatform.org/
-simulation_url_remote=http://dev.opensimplatform.org/simulation/
-uploads_remote=/usr/local/etc/httpd/sites/peaceplatform.org/catalina/bin/uploads
+dialect=org.hibernate.dialect.MySQLInnoDBDialect
+driver_class=com.mysql.jdbc.Driver
+base_sim_url=http://dev.opensimplatform.org/
+simulation_url=http://dev.opensimplatform.org/simulation/
+uploads=/usr/local/etc/httpd/sites/peaceplatform.org/catalina/bin/uploads
 
-
-###########################################################################
-unittest_principalschema_local=usiposp
-unittest_schema_local=usiposp
-unittest_username_local=root
-unittest_password_local=password
 
