Lots of odds and ends. The first Australian run was tonight, and while standing by I had some time to fix some good edits in the tutorial Dan gave us at the OSP Con.

--- a/WEB-INF/classes/USIP_OSP_Properties_en_US.properties.template
+++ b/WEB-INF/classes/USIP_OSP_Properties_en_US.properties.template
@@ -23,6 +23,14 @@
 #
 next_planned_outage=None Currently Planned
 
+################################################################
+#
+# Server color is used to help people to easily distinguish which server they are working on.
+#
+
+server_color=FFDDDD
+server_name=USIP Development Server
+
 ################################################################################
 # URL of the apache/tomcat server
 #
