utf-8, and control can now edit any document in their sim

--- a/WEB-INF/classes/USIP_OSP_Properties_en_US.properties.template
+++ b/WEB-INF/classes/USIP_OSP_Properties_en_US.properties.template
@@ -101,7 +101,7 @@ password=password
 # Dialect of communication between the database and hibernate
 #     (This probably will not need changed.)
 #
-dialect=org.hibernate.dialect.MySQLInnoDBDialect
+dialect=org.usip.osp.persistence.CharsetUTFDialect
 
 ################################################################################
 # Driver class for communication between the database and hibernate
