bug fixes, peaceconferencing, letting authors kick off test games.

--- a/WEB-INF/classes/USIP_OSP_Properties_en_US.properties.template
+++ b/WEB-INF/classes/USIP_OSP_Properties_en_US.properties.template
@@ -41,6 +41,11 @@ base_sim_url=http://dev.opensimplatform.org/
 #
 simulation_url=http://dev.opensimplatform.org/simulation/
 
+################################################################################
+# timezone offset of this server
+#
+server_timezone_offset=-5.0
+
 
 ###########
 # Section 2 - File System Related
