--- a/trunk/WEB-INF/classes/USIP_OSP_Properties_en_US.properties.template
+++ b/trunk/WEB-INF/classes/USIP_OSP_Properties_en_US.properties.template
@@ -44,7 +44,7 @@ simulation_url=http://dev.opensimplatform.org/simulation/
 ################################################################################
 # timezone offset of this server
 #
-server_timezone_offset=-5.0
+server_timezone_offset=EST
 
 
 ###########
